<resources>
    <string name="app_name">BdD PF</string>
    <string name="flights">Vuelos</string>
    <string name="passengers">Pasajeros</string>
    <string name="reservations">Reservaciones</string>
    <string name="tickets">Boletos</string>
    <string name="from">Salida:</string>
    <string name="flightID">FlightID:</string>
    <string name="origin">origin:</string>
    <string name="terminal">Terminal:</string>
    <string name="gate">Puerta:</string>
    <string name="destination">Destination:</string>
    <string name="filldatabase">Llenar base de datos</string>
    <string name="passenger">Passenger:</string>
    <string name="payment">Payment:</string>
    <!-- name is repeated -->
    <string name="name">Nombre:</string>
    <string name="nombre">Nombre:</string>
    <string name="pais">País:</string>
    <string name="numero_cel">Num cel:</string>
    <string name="numero_fijo">Num fijo:</string>
    <string name="email">Email:</string>
    <string name="curp">CURP:</string>
    <string name="tipo">Pasajero tipo:</string>
    <string name="dir">Dirección:</string>
    <string name="zip">Código postal:</string>
    <string name="estado">Estado:</string>
    <string name="apellido">Apellido:</string>
    <string name="ciudad">Ciudad:</string>
    <string name="emptydatabase">reiniciar base de datos</string>
    <string name="airports">aeropuertos</string>
    <string name="airplane">Aviones</string>
    <string name="Code">Codigo:</string>
    <string name="model">Model:</string>
    <string name="ID">ID:</string>
    <string name="ticketnumber">Ticket number:</string>
    <string name="classflight">Class:</string>
    <string name="reservation">Reservation:</string>
</resources>
