<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:id="@+id/row1">
            <Button
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:text="@string/flights"
                android:id="@+id/btn_seeFlights"/>
            <Button
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:text="@string/passengers"
                android:id="@+id/btn_seePassengers"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:id="@+id/row2"
            android:gravity="center"
            android:layout_below="@id/row1">
            <Button
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:text="@string/reservations"
                android:id="@+id/btn_seeReservations"/>
            <Button
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:text="@string/tickets"
                android:id="@+id/btn_seeTickets"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:id="@+id/row3"
            android:layout_below="@id/row2">
            <Button
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:text="@string/airplane"
                android:id="@+id/btn_airplanes"/>
            <Button
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:text="@string/airports"
                android:id="@+id/btn_airport"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:layout_below="@id/row3">
            <Button
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:text="@string/filldatabase"
                android:id="@+id/btn_fillDB"/>
            <Button
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:text="@string/emptydatabase"
                android:id="@+id/btn_empty"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>