<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PassengerActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre"/>
                <AutoCompleteTextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_nombre"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apellido"/>
                <AutoCompleteTextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_apellido"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ciudad"/>
                <AutoCompleteTextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_ciudad"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pais"/>
                <AutoCompleteTextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_pais"/>
            </LinearLayout>
        </LinearLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/listview"/>
    </LinearLayout>

    <!-- this was in master, changed the layout from Relative to Linear -->
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="40dp"
        android:src="@mipmap/ic_add_black_24dp" />

</RelativeLayout>
